--- a/CODE/requirements.txt
+++ b/CODE/requirements.txt
@@ -27,6 +27,7 @@ Chroma==0.2.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.14
 click==8.1.7
+colorama==0.4.6
 coloredlogs==15.0.1
 datasets==2.14.5
 deepspeed==0.15.2
@@ -69,6 +70,7 @@ idna==3.4
 imagesize==1.4.1
 importlib-metadata==8.5.0
 importlib-resources==6.1.0
+-e ./IndicTransToolkit
 iniconfig==2.0.0
 itsdangerous==2.0.1
 jaraco.context==4.3.0
@@ -93,6 +95,7 @@ mdurl==0.1.2
 ml-dtypes==0.3.2
 monotonic==1.6
 more-itertools==10.1.0
+Morfessor==2.0.6
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.0.4
@@ -118,6 +121,7 @@ peft==0.5.0
 pexpect==4.8.0
 pinecone-client==2.2.4
 pluggy==1.3.0
+portalocker==3.1.1
 posthog==3.0.2
 prompt-toolkit==3.0.39
 protobuf==4.24.4
@@ -145,6 +149,8 @@ PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 rich==13.6.0
+sacrebleu==2.5.1
+sacremoses==0.1.1
 safetensors==0.4.0
 scholarly==1.7.11
 scikit-learn==1.4.0
@@ -158,6 +164,7 @@ snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 sphinx==7.2.6
+sphinx-argparse==0.4.0
 sphinx-rtd-theme==1.3.0
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
@@ -169,6 +176,7 @@ sphinxcontrib-serializinghtml==1.1.9
 SQLAlchemy==1.4.19
 starlette==0.27.0
 sympy==1.12
+tabulate==0.9.0
 tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
