--- a/CODE/requirements.txt
+++ b/CODE/requirements.txt
@@ -1,5 +1,7 @@
+accelerate>=0.26.0
 alabaster==0.7.16
 babel==2.16.0
+bitsanybytes==0.42.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
