--- a/CODE/requirements.txt
+++ b/CODE/requirements.txt
@@ -1,45 +1,353 @@
-accelerate>=0.26.0
+absl-py==1.0.0
+accelerate==1.3.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+airportsdata==20241001
 alabaster==0.7.16
+annotated-types==0.7.0
+anyio==3.5.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.5.0
+astropy==5.0.2
+asttokens==2.0.5
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==5.0.1
+attr==0.3.1
+attrs==25.1.0
+azure-core==1.23.0
+azure-storage-blob==12.10.0
 babel==2.16.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+beautifultable==1.0.1
+bitsandbytes==0.45.2
+bleach==4.1.0
+blessed==1.19.1
+blessings==1.7
+blis==1.0.0
+bokeh==2.4.3
+boto==2.49.0
+boto3==1.16.63
+botocore==1.19.63
+boxing==0.1.4
+cachetools==4.2.4
+Cartopy==0.0.0
+catalogue==2.0.10
 certifi==2024.12.14
+cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==3.4.1
-click==8.1.8
+click==7.1
+cloudpathlib==0.20.0
+cloudpickle==3.1.1
 colorama==0.4.6
+colorcet==3.0.0
+coloredlogs==15.0.1
+compressed-tensors==0.6.0
+confection==0.1.5
+config==0.5.1
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.2
+cycler==0.11.0
+cymem==2.0.11
+Cython==0.29.32
+datasets==3.2.0
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+deprecation==2.1.0
+dill==0.3.8
+diskcache==5.6.3
+distlib==0.3.4
+distro==1.9.0
+Django==3.1.14
+django-annoying==0.10.6
+django-cors-headers==3.6.0
+django-debug-toolbar==3.2.1
+django-extensions==3.1.0
+django-filter==2.4.0
+django-model-utils==4.1.1
+django-ranged-fileresponse==0.1.2
+django-redis-cache==3.0.1
+django-rest-swagger==2.2.0
+django-rq==2.4.1
+django-user-agents==0.4.0
+djangorestframework==3.13.1
+docstring_parser==0.16
 docutils==0.21.2
+drf-dynamic-fields==0.3.0
+drf-flex-fields==0.9.5
+drf-generators==0.3.0
+drf-yasg==1.20.0
+easyocr==1.5.0
+einops==0.8.0
+encoding-tools==0.0.3
+entrypoints==0.4
+ESMPy==8.4.0
+et-xmlfile==1.1.0
+eval_type_backport==0.2.2
+executing==0.8.3
+expiringdict==1.1.4
+f90wrap==0.2.13
+fastapi==0.115.8
 filelock==3.17.0
-fsspec==2024.12.0
+flatbuffers==25.1.24
+fonttools==4.31.2
+frozenlist==1.5.0
+fsspec==2024.9.0
+future==1.0.0
+gast==0.4.0
+genson==1.3.0
+gguf==0.10.0
+google-api-core==1.31.5
+google-auth==2.38.0
+google-auth-oauthlib==1.0.0
+google-cloud-appengine-logging==1.1.0
+google-cloud-audit-log==0.2.0
+google-cloud-core==1.5.0
+google-cloud-logging==2.7.0
+google-cloud-storage==1.29.0
+google-crc32c==1.3.0
+google-pasta==0.2.0
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
+gpustat==0.6.0
+grpc-google-iam-v1==0.12.3
+grpcio==1.70.0
+h11==0.14.0
+h5netcdf==1.0.2
+h5py==3.12.1
+hf_transfer==0.1.9
+holoviews==1.15.0
+htmlmin==0.1.12
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.1
+humanfriendly==10.0
+hvplot==0.8.1
 idna==3.10
+imageio==2.20.0
 imagesize==1.4.1
-importlib-metadata==8.6.1
-indic-nlp-library-IT2==0.0.2
--e git+https://github.com/VarunGumma/IndicTransToolkit.git@92ed4677731f192ef4e6d7c22b69bf44a4c1fb3f#egg=IndicTransToolkit
-jinja2==3.1.5
+img2pdf==0.4.4
+importlib_metadata==8.6.1
+indic-nlp-library==0.92
+IndicTransToolkit @ git+https://github.com/VarunGumma/IndicTransToolkit.git@92ed4677731f192ef4e6d7c22b69bf44a4c1fb3f#egg=IndicTransToolkit
+inflection==0.5.1
+iniconfig==1.1.1
+interegular==0.3.3
+ipykernel==6.9.2
+ipython==8.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+isodate==0.6.1
+itypes==1.2.0
+jax==0.4.30
+jaxlib==0.4.30
+jedi==0.18.1
+Jinja2==3.1.5
+jiter==0.8.2
+jmespath==0.10.0
 joblib==1.4.2
+json5==0.9.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyter-packaging==0.12.0
+jupyter-server==1.15.6
+jupyterlab==3.3.2
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.11.2
+jupyterlab-widgets==1.1.0
+keras==2.13.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.0
+label-studio==1.4.1.post1
+label-studio-converter==0.0.39
+label-studio-tools==0.0.0.dev11
+langcodes==3.5.0
+language_data==1.3.0
+lark==1.2.2
+launchdarkly-server-sdk==7.3.0
+levenshtein==0.26.1
+libclang==13.0.0
+llvmlite==0.40.1
+lm-format-enforcer==0.10.6
+lockfile==0.12.2
 lxml==5.3.0
+marisa-trie==1.2.1
+Markdown==3.3.6
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mdurl==0.1.2
+MetPy==1.3.1
+mistral_common==1.5.2
+mistune==0.8.4
+ml-dtypes==0.4.1
+mock==4.0.3
+more-itertools==8.12.0
 Morfessor==2.0.6
+moto==3.1.1
+mpi4py==3.1.3
 mpmath==1.3.0
+msgpack==1.1.0
+msgspec==0.19.0
+msrest==0.6.21
+multidict==6.1.0
+multiprocess==0.70.16
+murmurhash==1.0.12
+namex==0.0.8
+nbclassic==0.3.7
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.2.0
+nest-asyncio==1.5.4
 networkx==3.2.1
-numpy==1.26.4
+nltk==3.6.7
+notebook==6.4.10
+notebook-shim==0.1.0
+numba==0.57.1
+numpy==1.23.5
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-cusparselt-cu12==0.6.2
+nvidia-ml-py==11.450.51
+nvidia-ml-py3==7.352.0
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+nvitop==1.3.2
+oauthlib==3.2.0
+openai==1.61.0
+openapi-codec==1.3.2
+opencv-python-headless==4.5.4.60
+openpyxl==3.0.9
+opt-einsum==3.3.0
+optree==0.14.0
+ordered-set==4.0.2
+outlines==0.0.43
+outlines_core==0.1.26
 packaging==24.2
 pandas==2.2.3
+pandocfilters==1.5.0
+panel==0.13.1
+param==1.12.2
+parso==0.8.3
+partial-json-parser==0.2.1.1.post5
+pdf2jpg==1.1
+peft==0.14.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pikepdf==5.4.2
 pillow==11.1.0
+Pint==0.19.2
+platformdirs==2.5.1
+pluggy==1.0.0
+pooch==1.6.0
 portalocker==3.1.1
-protobuf==5.29.3
-pygments==2.19.1
+portpicker==1.5.2
+preshed==3.0.9
+prometheus-client==0.18.0
+prometheus-fastapi-instrumentator==7.0.2
+promise==2.3
+prompt-toolkit==3.0.28
+propcache==0.2.1
+proto-plus==1.20.3
+protobuf==3.20.3
+psutil==5.9.0
+psycopg2-binary==2.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+py-cpuinfo==9.0.0
+py-trello==0.18.0
+pyairports==2.1.1
+pyarrow==19.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycountry==24.6.1
+pycparser==2.21
+pyct==0.4.8
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyds9==1.8.1
+pyerfa==2.0.0.1
+Pygments==2.19.1
+pyparsing==3.0.7
+pyproj==3.3.1
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
+pyRFC3339==1.1
+pyrsistent==0.18.1
+pyshp==2.3.1
+pytest==7.1.1
+python-bidi==0.4.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytorch-transformers==1.2.0
 pytz==2024.2
+pyviz-comms==2.2.1
+PyWavelets==1.3.0
 PyYAML==6.0.2
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+ray==2.38.0
+redis==3.5.3
+referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==1.3.1
+responses==0.20.0
+rich==13.6.0
+rich-click==1.7.1
+rpds-py==0.20.0
+rq==1.10.0
+rsa==4.8
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+rules==2.2
+s3transfer==0.3.7
 sacrebleu==2.5.1
 sacremoses==0.1.1
 safetensors==0.5.2
+scikit-image==0.19.3
+scikit-learn==1.1.1
+scipy==1.9.1
+semver==2.13.0
+Send2Trash==1.8.0
 sentencepiece==0.2.0
+sentry-sdk==1.5.8
+Shapely==1.8.4
+shellingham==1.5.4
+shtab==1.7.1
+simplejson==3.17.6
 six==1.17.0
+smart-open==7.0.5
+sniffio==1.2.0
 snowballstemmer==2.2.0
-sphinx==7.4.7
+soupsieve==2.3.1
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+Sphinx==7.4.7
 sphinx-argparse==0.4.0
 sphinx-rtd-theme==3.0.2
 sphinxcontrib-applehelp==2.0.0
@@ -49,22 +357,79 @@ sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
-sympy==1.13.3
+spython==0.2.1
+sqlparse==0.4.2
+srsly==2.4.8
+stack-data==0.2.0
+starlette==0.41.0
+sympy==1.13.1
 tabulate==0.9.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.13.0
+tensorflow-addons==0.23.0
+tensorflow-datasets==3.2.1
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.24.0
+tensorflow-metadata==1.16.1
+termcolor==1.1.0
+terminado==0.13.3
+testpath==0.6.0
+tf-estimator-nightly==2.8.0.dev2021122109
+tf2crf==0.1.33
+Theano==1.0.5
+thinc==8.3.2
+threadpoolctl==3.1.0
+tifffile==2022.5.4
+tiktoken==0.7.0
 tokenizers==0.21.0
 tomli==2.2.1
-torch==2.2.2
+tomlkit==0.10.0
+torch==2.4.0
 torchaudio==2.2.2
-torchvision==0.17.2
+torchvision==0.19.0
+tornado==6.1
 tqdm==4.67.1
-transformers==4.48.1
-typing-extensions==4.12.2
+traitlets==5.1.1
+transformers==4.48.2
+triton==3.0.0
+trl==0.14.0
+typeguard==4.4.1
+typer==0.12.5
+typing_extensions==4.12.2
+tyro==0.9.14
 tzdata==2025.1
-urllib3==2.3.0
+ua-parser==0.10.0
+ujson==5.1.0
+Unidecode==1.3.4
+unsloth @ git+https://github.com/unslothai/unsloth.git@646ad2f141a3a0721d1ec9449cf9454b5612a84a
+unsloth_zoo @ git+https://github.com/unslothai/unsloth-zoo.git@de3f00e0c1078d4a9db2c9f81e63aa4a0c9146de
+urduhack==1.1.1
+uritemplate==4.1.1
+urllib3==1.26.9
+user-agents==2.2.0
+uvicorn==0.32.0
+uvloop==0.21.0
+virtualenv==20.14.0
+vllm==0.6.3.post1
+wasabi==1.1.3
+watchfiles==0.24.0
+wcwidth==0.2.5
+weasel==0.4.1
+webencodings==0.5.1
+websocket-client==1.3.1
+websockets==13.1
+websockify==0.10.0
+Werkzeug==2.0.3
+widgetsnbextension==3.6.0
+wrapt==1.14.0
+xarray==2022.6.0
+xformers==0.0.27.post2
+xlrd==2.0.1
+xmljson==0.2.0
+xmltodict==0.12.0
+xxdiff-scripts==5.1
+xxhash==3.5.0
+yarl==1.18.3
 zipp==3.21.0
-
-
-
-
-
-
