--- a/CODE/requirements.txt
+++ b/CODE/requirements.txt
@@ -173,6 +173,7 @@ label-studio==1.4.1.post1
 label-studio-converter==0.0.39
 label-studio-tools==0.0.0.dev11
 langcodes==3.5.0
+langdetect==1.0.9
 language_data==1.3.0
 lark==1.2.2
 launchdarkly-server-sdk==7.3.0
